fixed chat to suppress "go to bottom" on narrow screen.

--- a/src/components/GoArena/GoBoard.css
+++ b/src/components/GoArena/GoBoard.css
@@ -217,7 +217,7 @@ div.intersection-hover:hover {
 
 
 
-@media screen and (max-width: 1540px) {
+@media screen and (max-width: 1600px) {
 
   .game-container {
     width:80vmin;
